# Warp_Wraith

./: LICENSE
warp_wraith_2/: CMakeLists.txt  package.xml
warp_wraith_2/config/: joint_names_warp_wraith_2.yaml
warp_wraith_2/launch/: display.launch  gazebo.launch
warp_wraith_2/meshes/: link_a0.STL  link_a1.STL  link_a2.STL  link_b0.STL  link_b1.STL  link_b2.STL  link_c.STL  link_c0.STL  link_c1.STL  link_c2.STL  link_d0.STL  link_d1.STL  link_d2.STL  link_e0.STL  link_e1.STL  link_e2.STL  link_f0.STL  link_f1.STL  link_f2.STL
warp_wraith_2/urdf/: warp_wraith_2.csv  warp_wraith_2.urdf
warp_wraith_driver/: CMakeLists.txt  CMakeLists_OLD.txt  package.xml
warp_wraith_driver/src/: rotate_prepare.py  rotate_w (another copy).py  rotate_w (copy).py  rotate_w.py  send.cpp  stand.py
ww_config/: CMakeLists.txt  package.xml
ww_config/config/: fake_controllers.yaml  joint_limits (copy).yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml  warp_wraith_2.srdf
ww_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  warp_wraith_2_moveit_controller_manager.launch.xml
